Update various files.

--- a/package.json
+++ b/package.json
@@ -15,28 +15,27 @@
     "homepage": "https://github.com/builtnorth/wp-admin-dashboard?tab=readme-ov-file#readme",
     "exports": {
         ".": "./src/scss/style.scss",
-        "./base/": "./src/scss/base/index.scss",
-        "./base/utilities": "./src/scss/base/utilities.scss",
-        "./base/reset": "./src/scss/base/reset.scss",
-        "./base/accessibility": "./src/scss/base/accessibility.scss",
+        "./base": "./src/scss/base/index.scss",
+        "./base/utilities": "./src/scss/base/_utilities.scss",
+        "./base/reset": "./src/scss/base/_reset.scss",
+        "./base/accessibility": "./src/scss/base/_accessibility.scss",
         "./components": "./src/scss/components/index.scss",
-        "./components/buttons": "./src/scss/components/buttons.scss",
-        "./components/icons": "./src/scss/components/icons.scss",
-        "./components/slider": "./src/scss/components/slider.scss",
+        "./components/buttons": "./src/scss/components/_buttons.scss",
+        "./components/slider": "./src/scss/components/_slider.scss",
         "./forms": "./src/scss/forms/index.scss",
-        "./forms/label": "./src/scss/forms/label.scss",
-        "./forms/fieldset": "./src/scss/forms/fieldset.scss",
-        "./forms/select": "./src/scss/forms/select.scss",
-        "./forms/checkbox": "./src/scss/forms/checkbox.scss",
-        "./forms/text": "./src/scss/forms/text.scss",
+        "./forms/label": "./src/scss/forms/_label.scss",
+        "./forms/fieldset": "./src/scss/forms/_fieldset.scss",
+        "./forms/select": "./src/scss/forms/_select.scss",
+        "./forms/checkbox": "./src/scss/forms/_checkbox.scss",
+        "./forms/text": "./src/scss/forms/_text.scss",
         "./helpers": "./src/scss/helpers/index.scss",
-        "./helpers/mixins": "./src/scss/helpers/mixins.scss",
-        "./helpers/functions": "./src/scss/helpers/functions.scss",
-        "./helpers/media-queries": "./src/scss/helpers/media-queries.scss",
+        "./helpers/mixins": "./src/scss/helpers/_mixins.scss",
+        "./helpers/functions": "./src/scss/helpers/_functions.scss",
+        "./helpers/media-queries": "./src/scss/helpers/_media-queries.scss",
         "./layout": "./src/scss/layout/index.scss",
-        "./layout/grid": "./src/scss/layout/grid.scss",
-        "./layout/columns": "./src/scss/layout/columns.scss",
+        "./layout/grid": "./src/scss/layout/_grid.scss",
+        "./layout/columns": "./src/scss/layout/_columns.scss",
         "./gutenberg": "./src/scss/gutenberg/index.scss",
-        "./gutenberg/quirks": "./src/scss/gutenberg/quirks.scss"
+        "./gutenberg/quirks": "./src/scss/gutenberg/_quirks.scss"
     }
 }
