--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "./base/reset": "./src/scss/base/_reset.scss",
         "./base/accessibility": "./src/scss/base/_accessibility.scss",
         "./base/images": "./src/scss/base/_images.scss",
+        "./base/colors": "./src/scss/base/_colors.scss",
         "./components": "./src/scss/components/index.scss",
         "./components/buttons": "./src/scss/components/_buttons.scss",
         "./components/slider": "./src/scss/components/_slider.scss",
