feat: add accessible card utility class for clickable card patterns
  Add is-accessible-card utility class that makes entire cards clickable
  by stretching the title link to cover the full card area. Maintains
  accessibility and allows other interactive elements to remain clickable
  through proper z-index layering. Includes hover states for better UX.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"./layout/grid": "./src/scss/layout/_grid.scss",
 		"./layout/columns": "./src/scss/layout/_columns.scss",
 		"./gutenberg": "./src/scss/gutenberg/index.scss",
-		"./gutenberg/quirks": "./src/scss/gutenberg/_quirks.scss"
+		"./gutenberg/quirks": "./src/scss/gutenberg/_quirks.scss",
+		"./gutenberg/placeholders": "./src/scss/gutenberg/_placeholders.scss"
 	}
 }
