feat: add GitHub Actions workflows and package improvements
- Add CI workflow that uses reusable npm-package-ci.yml
- Add Release workflow for automated publishing to GitHub Packages
- Update package.json with build script and correct repository URLs
- Update .npmignore to properly include src/ directory for SCSS exports
- Add comprehensive README with installation and usage documentation

The workflows are configured for a pure SCSS package:
- CI skips tests, lint, and build steps
- Release publishes to GitHub Packages only
- Both workflows reference basecamp-dev reusable workflows

This brings ui-kit in line with other Built North npm packages and
enables automated releases via git tags or manual workflow dispatch.

--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,13 @@
-src
+# Development files
+.github/
+.gitignore
+node_modules/
+
+# Build configuration (not needed since we publish source SCSS)
 rollup.config.js
-.babelrc
-node_modules
-dist
 rollup.config.mjs
+.babelrc
 babel.config.json
+
+# OS files
+.DS_Store
