--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@builtnorth/ui-kit",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "NPM package for very minimal global and common CSS and JS.",
 	"main": "index.js",
 	"scripts": {
@@ -18,6 +18,7 @@
 	"homepage": "https://github.com/builtnorth/ui-kit#readme",
 	"exports": {
 		".": "./src/scss/style.scss",
+		"./config": "./src/scss/_config.scss",
 		"./essential-styles": "./src/scss/essential-styles.scss",
 		"./base": "./src/scss/base/index.scss",
 		"./base/utilities": "./src/scss/base/_utilities.scss",
